# pg-typeprovider

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  table.rs  util.rs
tests/: test.rs
