[package]

name = "pg_typeprovider"
version = "0.0.1"
authors = ["Jared Roesch <roeschinc@gmail.com>"]

[dependencies.postgres]
git = "https://github.com/sfackler/rust-postgres.git"

[dependencies]
time = "0.1"
openssl = "0.2.1"

[lib]
name = "pg_typeprovider"
path = "src/lib.rs"
crate-type = ["dylib"]
